fixed profile pic editor on mobile

--- a/public/ProfilePictureCreation.css
+++ b/public/ProfilePictureCreation.css
@@ -82,6 +82,7 @@
     display: flex;
     flex-direction: column;
     padding-top: 10px;
+    height: calc(100% - 30px*2 - 300px - var(--row-height) - 10px);
 
 }
 .mobile #controlPanel {
